welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:17: error: not found: value estFacemur
  if (estFacemur())
      ^