welcome.lessons.welcome.summative.Moria.scala.code
def trouverBiscuit(){
  droite()
  while (!estSurBiscuit()){
    avance()
  }
  prendBiscuit()
  retourne()
  while (!estSurBiscuit()){
    avance()
  }
  poseBiscuit()
  retourne()
  avance()
}

def sortie(): Boolean={
  if (estFacemur())
  	return true
  return false
}


while (sortie()==false) {
  trouverBiscuit()
}
droite()
avance()
gauche()
avance()